--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "test:unit": "jest unit.test.ts"
   },
   "devDependencies": {
+    "@angular/cli": "^10.0.5",
+    "@types/jest": "^26.0.9",
     "@typescript-eslint/eslint-plugin": "3.9.0",
     "@typescript-eslint/parser": "3.9.0",
-    "@types/jest": "^26.0.9",
     "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
+    "jest": "^26.3.0",
     "lerna": "^3.22.1",
     "prettier": "2.0.5",
+    "ts-jest": "^26.2.0",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
-    "webpack": "4.44.1",
-    "jest": "^26.3.0",
-    "ts-jest": "^26.2.0"
+    "webpack": "4.44.1"
+  },
+  "dependencies": {
+    "bootstrap": "3"
   }
 }
